src/style/sass/style.scss
// standard values for main-content centering
$standard-width: 500px;
$centre-margin: 0 auto;

// standard values for textfields
$input-height: 40px;
$input-fontsize: 19px;
$input-padding: 0 10px;



  // NAVIGATION BAR FOR THE WHOLE WEBSITE
.navbar {
  padding: 0 30px;
  .navbar-brand {
    a {
      color: #444;
      &:hover {
        text-decoration: none;
      }
    }
  }
}



/*

  index.php
  All css for code within <main>

*/
.index-main {
  width: $standard-width;
  margin: $centre-margin;

  header {
    h1 {
      margin-top: 50px;
      margin-bottom: 30px;
      font-size: 70px;
    }
  }

  form {
    width: 300px;
    margin: 40px auto;

    input {
      width: 100%;
      height: $input-padding;
      font-size: $input-fontsize;
      padding: $input-padding;
    }

    button {
      margin-top: 10px;
      width: 100%;
      height: 40px;
    }
  }

}



/*

  write.php
  All css for code within <main>

*/
.write-main {
  width: $standard-width;
  margin: $centre-margin;

  textarea {
    padding: 10px;
    width: 100%;
    resize: none;
    min-height: 400px;
    height: $input-height;
    font-size: $input-fontsize;
  }

  input {
    width: 100%;
    margin-bottom: 10px;
    padding: $input-padding;
    height: $input-height;
    font-size: $input-fontsize;
  }

}



/*

  review.php
  All css for code within <main>

*/
.review-main {
  width: $standard-width;
  margin: $centre-margin;
}



/*

  notes.php
  All css for code within <notes.php>

*/

a.list-group-item{
width: 99%;
max-width: 800px;
margin: $centre-margin;

	p.list-group-item-text{
	 display: inline-block;
	 width: 70%;
	}
	
	p.list-group-item-date{
	float: right;
	display:inline-block;
	margin: 0;
	}
	
}

/*

  view-note.php
  All css for code within <view-notes.php>

*/

#note-main{
width: 99%;
max-width: 800px;
margin: $centre-margin;

  h2 {
  text-align: center;
  margin: 20px;
  }
  
  h5#date{
  text-align: right;
  
  }
 
  p.content{
  text-align: left;
  
  }
 

}




/*

  register.php
  All css for code within <main>

*/
.register-main {
  width: $standard-width;
  margin: $centre-margin;

  header {
    padding-top: 20px;
    width: 500px;
    color: #777;
    margin: 0 auto;
  }

  input {
    width: 100%;
    margin-bottom: 10px;
    padding: $input-padding;
    height: $input-height;
    font-size: $input-fontsize;
  }

}



/*

  login.php
  All css for code within <main>

*/
.login-main {
  width: $standard-width;
  margin: $centre-margin;

  header {
    padding-top: 20px;
    width: 500px;
    color: #777;
    margin: 0 auto;
  }

  input {
    width: 100%;
    margin-bottom: 10px;
    padding: $input-padding;
    height: $input-height;
    font-size: $input-fontsize;
  }

}

